<resources>
    <string name="app_name">Agenda personal</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="description">Descripción</string>
    <string name="done">Hecho</string>
    <string name="required">Requerido</string>
    <string name="error_input_empty">Este campo no puede quedar vacío</string>
    <string name="KEY_USER">user</string>
    <string name="select_date">Selecciona tu fecha de nacimiento</string>
    <string name="error_email_false">Inserta un correo válido</string>
    <string name="confirm_title">Confirmar datos</string>
    <string name="edit">Editar</string>
</resources>